--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <div id="app"></div>
+     <div class="modals-container"></div>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
